Added a bunch of stuff into app.config instead of them being in the main form
Conflicts:
	Uwizard/app.config

--- a/Uwizard/app.config
+++ b/Uwizard/app.config
@@ -1,5 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-    </configSections>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="Uwizard.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Uwizard.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <appSettings>
+    <add key="GameDatabasePath" value="Database.xml" />
+    <add key="GameDescriptionPath" value="wiiutdb.xml" />
+  </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <userSettings>
+    <Uwizard.Properties.Settings>
+      <setting name="Language" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="GameTDBCoverFront" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <string>http://art.gametdb.com/wiiu/coverHQ/</string>
+            <string>http://art.gametdb.com/wiiu/coverM/</string>
+            <string>http://art.gametdb.com/wiiu/cover/</string>
+          </ArrayOfString>
+        </value>
+      </setting>
+      <setting name="GameTDBCover3D" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <string>http://art.gametdb.com/wiiu/cover3D/</string>
+          </ArrayOfString>
+        </value>
+      </setting>
+      <setting name="GameTDBCoverFull" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <string>http://art.gametdb.com/wiiu/coverfullHQ/</string>
+            <string>http://art.gametdb.com/wiiu/coverfullM/</string>
+            <string>http://art.gametdb.com/wiiu/coverfull/</string>
+          </ArrayOfString>
+        </value>
+      </setting>
+      <setting name="GameTDBCoverDisc" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <string>http://art.gametdb.com/wiiu/discHQ/</string>
+            <string>http://art.gametdb.com/wiiu/discM/</string>
+            <string>http://art.gametdb.com/wiiu/disc/</string>
+          </ArrayOfString>
+        </value>
+      </setting>
+      <setting name="UserAncastStarbuckKey" serializeAs="String">
+        <value>
+        </value>
+      </setting>
+      <setting name="UserAncastEspressoKey" serializeAs="String">
+        <value>
+        </value>
+      </setting>
+      <setting name="UserCommonKey" serializeAs="String">
+        <value>
+        </value>
+      </setting>
+    </Uwizard.Properties.Settings>
+  </userSettings>
+  <applicationSettings>
+    <Uwizard.Properties.Settings>
+      <setting name="GameFileFolderList" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
+        </value>
+      </setting>
+    </Uwizard.Properties.Settings>
+  </applicationSettings>
