Started Working on a Setup File

--- a/UwizardWPF/UwizardWPF.csproj
+++ b/UwizardWPF/UwizardWPF.csproj
@@ -157,6 +157,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="Server\ISQLiteDatabase.cs" />
+    <Compile Include="Setup.cs" />
     <Compile Include="ViewModel\GameManagementViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\TabViewModel.cs" />
