--- a/UwizardWPF/UwizardWPF.csproj
+++ b/UwizardWPF/UwizardWPF.csproj
@@ -161,6 +161,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="Server\ISQLiteDatabase.cs" />
+    <Compile Include="Server\SQLiteDatabase.cs" />
     <Compile Include="Setup.cs" />
     <Compile Include="ViewModel\GameManagementViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
