--- a/UwizardWPF/UwizardWPF.csproj
+++ b/UwizardWPF/UwizardWPF.csproj
@@ -128,7 +128,12 @@
     <Compile Include="Entities\WiiUDisk.cs" />
     <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="MVVM\IContainer.cs" />
+    <Compile Include="MVVM\IContainerMapper.cs" />
+    <Compile Include="MVVM\Resolver.cs" />
     <Compile Include="MVVM\SimpleInjectorServiceLocatorAdapter.cs" />
+    <Compile Include="MVVM\UwizardContainer.cs" />
+    <Compile Include="MVVM\ViewFactory.cs" />
     <Compile Include="Resources\KeyHashes\vWiiResources.Designer.cs">
       <DependentUpon>vWiiResources.resx</DependentUpon>
       <AutoGen>True</AutoGen>
